@@ -1,5 +1,5 @@
 %-----------------------------------------
-%	$Id: GMT_Appendix_A.tex,v 1.37 2009-05-17 19:30:14 guru Exp $
+%	$Id: GMT_Appendix_A.tex,v 1.38 2009-05-19 20:20:53 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2009.
@@ -94,12 +94,13 @@ used to maintain, access, extract data from, and plot marine geophysical
 data files converted from the MGD77 format to the .gmt format\footnote{These data are available on CD-ROM from NGDC
 (www.ngdc.noaa.gov).}). The package is maintained by the \GMT\ developers.
 
-\section{misc: posters, patterns, and digitizing}
+\section{misc: Miscellaneous tools}
 
 At the moment, this package contains the programs \GMTprog{psmegaplot}
 which you can use to make large posters using a simple laserwriter,
 \GMTprog{makepattern} which generates raster patterns from \GMT\ 3.0
-icon files, \GMTprog{gmtdigitize} which provides a GMT interface
+icon files, \GMTprog{gmt2kml} which converts \GMT\ table data to Google
+Earth's KML format, \GMTprog{gmtdigitize} which provides a GMT interface
 to a digitizing tablet via a serial port, \GMTprog{gmtstitch} which can
 be used to assemble pieces digitized lines into complete lines or
 polygons, \GMTprog{gmtdp} which performs line reduction using the Douglas-Peucker algorithm,
